--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run": "node server.js",
-    "start": "nodemon server.js"
+    "rs": "npx nodemon server.js"
   },
   "keywords": [],
   "author": "",
